--- a/recruitment-website/.gitignore
+++ b/recruitment-website/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+# Ignore Firebase service account key file
+src/main/resources/firebase/serviceAccountKey.json
+
