--- a/recruitment-website/src/main/resources/application.properties
+++ b/recruitment-website/src/main/resources/application.properties
@@ -14,9 +14,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 # Bật logging SQL của Hibernate
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.org.hibernate.engine.jdbc=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.hibernate.cfg=DEBUG
 
 # Bật logging chi tiết cho Spring
 logging.level.org.springframework=DEBUG
 
 # Bật debug mode tổng quát
 debug=true
+
+#Fix upload file ảnh employer
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
