--- a/recruitment-website/src/main/resources/application.properties
+++ b/recruitment-website/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=recruitment-website
 
 # Cấu hình kết nối SQL Server
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=recruitment;instanceName=SQLEXPRESS;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://MSI:1433;databaseName=recruitment;instanceName=SQLEXPRESS;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456789
+spring.datasource.password=13012004
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Cấu hình JPA/Hibernate
